--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-.input {
-    text-transform: uppercase;
+* {
+    margin: 0;
+    padding: 0;
+}
+.app {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.main_screen {
+    height: calc(100vh - 10%);
+    display: flex;
 }
